# pam-passkey

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: config.h  convert.h  fido_device.h  fido_sign_request.h  fido_sign_response.h  offline_fido_credential.h  privacyidea.h  response.h
src/: convert.cpp  fido_device.cpp  privacyidea.cpp  privacyidea_passkey.cpp
